Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -332,11 +332,15 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
 .widget.extendednavigation {
 	text-align: center;
+	ul li {
+		float: none;
+	}
 }
 
 .widget.extendednavigation ul li {
-  display: block;
+  display: inline-block;
   text-align: center;
+  float: none;
 }
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
